optimized and started main structure of proj for prototyping; backend + tests on both sides will be added soon;

--- a/qtfrontend/tool/qml/qml.qrc
+++ b/qtfrontend/tool/qml/qml.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Page1Form.ui.qml</file>
-        <file>Page2Form.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>ui/prototype.qml</file>
+        <file>ui/Page1Form.ui.qml</file>
+        <file>ui/Page2Form.ui.qml</file>
     </qresource>
 </RCC>
