changes: - ui changed to destined purpose of basic file editor motivation: - feature testing backend (not yet impl)

--- a/qtfrontend/tool/qml/qml.qrc
+++ b/qtfrontend/tool/qml/qml.qrc
@@ -3,9 +3,8 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>ui/prototype.qml</file>
-        <file>ui/Page1Form.ui.qml</file>
-        <file>ui/Page2Form.ui.qml</file>
         <file>BasicToolBar.qml</file>
         <file>SideBar.qml</file>
+        <file>ui/ReadWriteText.ui.qml</file>
     </qresource>
 </RCC>
